# decoding-thoughts

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  requirements.txt  setup.cfg
.github/workflows/: gh-actions-ci.yml  python-app.yml
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/_autosummary/: src.data.dataset.load_dataset.rst  src.data.dataset.rst  src.data.rst  src.dataset.kay.download_data.rst  src.dataset.kay.load_dataset.rst  src.dataset.kay.rst  src.dataset.rst  src.explore.rst  src.explore.summary.plot_hierarchical_labels.rst  src.explore.summary.rst  src.ml.StimulusClassifierConfig.rst  src.ml.dataset.FMRIDataset.rst  src.ml.dataset.StimulusDataset.rst  src.ml.dataset.calculate_mean_std.rst  src.ml.dataset.create_weighted_sampler.rst  src.ml.dataset.rst  src.ml.model.StimulusClassifier.rst  src.ml.model.rst  src.ml.rst  src.ml.test.rst  src.ml.test.test_model.rst  src.ml.train.rst  src.ml.train.train_model.rst  src.ml.utils.calc_blur_acc_change.rst  src.ml.utils.calc_model_frobenius_norm.rst  src.ml.utils.calc_multi_acc.rst  src.ml.utils.count_model_params.rst  src.ml.utils.generate_score_report.rst  src.ml.utils.get_class_weights.rst  src.ml.utils.get_latent_emb_per_class.rst  src.ml.utils.plot_loss_acc_curves.rst  src.ml.utils.print_log.rst  src.rst  (+14 more)
notebooks/: 01_exploratory_analysis.ipynb  02_stimulus_cnn.ipynb  03_fmri_dnn.ipynb  04_rsa_analysis.ipynb  04_similarity_analysis.ipynb  Untitled.ipynb
src/: __init__.py
tests/: dummy_data.py  test_dataset.py  test_explore.py  test_ml.py  test_utils.py
(+37 files in other folders)
