[metadata]
name = decoding_thoughts
version = 0.0.1
author = Akshaj Verma
description = Decode stimulus images from brain fMRI data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/theairbend3r

[options]
packages = find:
python_requires = >=3.6
include_package_data = True